--- a/index.html
+++ b/index.html
@@ -4,24 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="https://armorate.github.io/media/alpha32.png" />
     <link rel="stylesheet" href="test.css" />
     <title>armorate</title>
   </head>
   <body>
     <header>
       <p id="top"></p>
-      <a class="a_h1" href="https://github.com/armorate"
-        ><h1 class="h100">armorate</h1></a
+        ><h1 class="h100">PAWAN</h1></a
       >
     </header>
     <main>
       <div class="div00">
-        <p class="p00">
-          I do like the dark humor movies like sausage party and Lorem ipsum
-          dolor sit amet consectetur adipisicing elit. Quisquam vel non
-          reprehenderit dolorem ad id, delectus cumque debitis voluptates
-          deserunt officiis.
+        <p class="p00">vella hu
         </p>
         <p class="p01">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga
